<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>key_event</name>
  <version>0.0.0</version>
  <description>key_event</description>

  <maintainer email="ardcxvsk@gmail.com">LSK</maintainer>
  <author email="lsk@TODO.com">LSK</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
